# OCR-detection

./: accuracy_calc.py  main.py  ocr_easyocr.py  ocr_pytesseract.py  ocr_vision.py  pyproject.toml
