[project]
name = "ocr-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "keras-ocr>=0.9.3",
    "numpy>=2.4.0",
    "paddleocr>=3.3.2",
    "pillow>=12.1.0",
    "pyobjc>=12.1",
    "pytesseract>=0.3.13",
    "rapidfuzz>=3.14.3",
    "tensorflow>=2.20.0",
]
